--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.0.13",
+    "@turf/bbox": "^7.2.0",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -32,7 +33,8 @@
     "react-router": "^7.3.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.13",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "turf": "^3.0.14"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
